--- a/project/client/src/pages/RegisteredEvents.css
+++ b/project/client/src/pages/RegisteredEvents.css
@@ -58,6 +58,8 @@
   margin: 0 auto;
   max-width: 1400px;
   border: 1px solid rgba(255, 255, 255, 0.2);
+  position: relative;
+  z-index: 10;
 }
 
 .search-filter-bar {
