--- a/project/client/src/pages/RegisteredEvents.css
+++ b/project/client/src/pages/RegisteredEvents.css
@@ -273,10 +273,16 @@
   position: relative;
   height: 180px;
   overflow: hidden;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   background-color: #c8d9e6; /* Fallback color */
+}
+
+.event-image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .event-details {
